--- a/config/examples/low_memory.yaml
+++ b/config/examples/low_memory.yaml
@@ -131,6 +131,7 @@ DUK_USE_SOURCE_NONBMP: false  # <300 bytes footprint
 DUK_USE_ES6_PROXY: false  # roughly 2kB footprint
 DUK_USE_ES7_EXP_OPERATOR: false  # pulls in pow()
 DUK_USE_ENCODING_BUILTINS: false
+DUK_USE_PERFORMANCE_BUILTIN: false
 DUK_USE_ES6_UNICODE_ESCAPE: false
 DUK_USE_HTML_COMMENTS: false
 DUK_USE_SHEBANG_COMMENTS: false
